--- a/ISIProject/Views/ClientReport/Index.cshtml
+++ b/ISIProject/Views/ClientReport/Index.cshtml
@@ -7,6 +7,7 @@
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
 
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script src="~/Scripts/ClientReport.js"></script>
 }
 
@@ -36,4 +37,5 @@
             </td>
         </tr>
     </table>
+    <div id="piechart" style="width: 900px; height: 500px;"></div>    
 }
